<?xml version="1.0"?>
<package format="3">
  <name>rmf_scheduler</name>
  <version>0.2.2</version>
  <description>
    An event scheduler for RMF.
    These events including robot tasks and other events that is related to the robot operation.
  </description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rmf_api_msgs</buildtool_depend>

  <build_depend>croncpp_vendor</build_depend>
  <build_depend>taskflow_vendor</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>ortools_vendor</depend>
  <depend>rmf_notification</depend>
  <test_depend>graphviz-dev</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
