<?xml version="1.0"?>
<package format="3">
  <name>rmf_scheduler_plugins</name>
  <version>0.1.0</version>
  <description>
    Default scheduler plugins for rmf_scheduler to interact with other RMF components
  </description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>
  <maintainer email="lum_kai_wen@artc.a-star.edu.sg">Lum Kai Wen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_api_msgs</depend>
  <depend>rmf_scheduler</depend>
  <depend>pluginlib</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>
  <buildtool_depend>rmf_api_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
