<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_scheduler_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 Interface for the rmf_scheduler package</description>
  <maintainer email="lum_kai_wen@artc.a-star.edu.sg">kai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>nlohmann-json-dev</build_depend>
  <depend>nlohmann_json_schema_validator_vendor</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_scheduler</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
