[metadata]
name = rmf2_scheduler_server
version = attr: rmf2_scheduler_server.__version__
url = https://rmf2.readthedocs.io
project_urls =
    GitHub = https://gitlab.com/ros-industrial/rmf2_scheduler/tree/main/demos/rmf2_scheduler_server
author = Chen Bainian
author_email = chenbn@artc.a-star.edu.sg
maintainer = Chen Bainian
maintainer_email = chenbn@artc.a-star.edu.sg
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Server Backend
license = Apache License, Version 2.0
description = Demo API server for RMF2 Scheduler.
long_description = file: README.md
keywords = rmf2_scheduler

[options]
python_requires = >=3.6
install_requires =
  fastapi>=0.104.1
  pydantic>=2.5.2
  uvicorn>=0.24.0
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  httpx
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
doc = 
  sphinx>=7.0.0
  sphinx-rtd-theme>=2.0.0
  sphinxcontrib-openapi>=0.8.4

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:pkg_resources is deprecated as an API::flake8_import_order
    ignore::pydantic.warnings.PydanticDeprecatedSince20
    ignore:The 'app' shortcut is now deprecated::httpx
    ignore:Deprecated call to \`pkg_resources.declare_namespace\('sphinxcontrib'\)\`.
junit_suite_name = rmf2_scheduler_server
markers =
    flake8
    linter

[options.entry_points]
console_scripts =
    rmf2_scheduler_server = rmf2_scheduler_server.cli:main

[flake8]
import-order-style = google
max-line-length = 80

[coverage:run]
source = rmf2_scheduler
